force-app/main/default/objects/Renewal__c/Renewal__c.object-meta.xml
<CustomObject>
    <label>Renewal</label>
    <nameField>
        <displayFormat>REN-{000000}</displayFormat>
        <label>Renewal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>