force-app/main/default/objects/Renewal__c/fields/Converted_Application__c.field-meta.xml
<CustomField>
    <fullName>Converted_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Converted Renewals</relationshipLabel>
    <relationshipName>Converted_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>