force-app/main/default/objects/Renewal__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>