force-app/main/default/objects/Renewal__c/validationRules/Converted_Requires_Converted_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_Requires_Converted_Application</fullName>
    <active>true</active>
    <description>Converted is the success outcome of a renewal campaign; it is only meaningful if it points at the application it produced.</description>
    <errorConditionFormula>AND( ISPICKVAL(Outreach_Status__c, &quot;Converted&quot;), ISBLANK(Converted_Application__c) )</errorConditionFormula>
    <errorDisplayField>Converted_Application__c</errorDisplayField>
    <errorMessage>Link the new application in Converted Application before setting Outreach Status to Converted.</errorMessage>
</ValidationRule>